--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,11 @@
             <version>6.11</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>RELEASE</version>
+        </dependency>
 
     </dependencies>
 
